# lib-shell

./: CMakeLists.txt  README.md
.github/workflows/: main.yml
cmake/: dependencies.cmake
examples/: CMakeLists.txt
examples/bash/: CMakeLists.txt
examples/bash/src/: main.cpp
examples/basic/: CMakeLists.txt
examples/basic/src/: main.cpp
examples/linux/bash/: CMakeLists.txt
examples/linux/bash/src/: main.cpp
inc/: shellcommand.hpp
inc/shell/: factory.hpp
inc/shell/interfaces/: shell.hpp
inc/shell/interfaces/bash/: shell.hpp
inc/shell/interfaces/linux/bash/: shell.hpp
src/: bashcommand.cpp
src/bash/: shell.cpp
src/linux/bash/: shell.cpp
tests/: CMakeLists.txt
tests/cmake/: dependencies.cmake
tests/inc/mocks/: mock_shell.hpp
tests/src/: test_command.cpp  test_shell.cpp
